# FarStar-cpp

./: .gitignore  CMakeLists.txt  main.cc
include/: Blaster.h  Container.h  Equipment.h  HeavyShip.h  HeavyWarShip.h  HybridShip.h  LightWeightShip.h  LightWeightWarShip.h  Phaser.h  Ship.h  TransportShip.h  WarShip.h  Weapon.h
src/: Blaster.cc  Blaster.h  Container.cc  Container.h  Equipment.cc  Equipment.h  HeavyShip.cc  HeavyWarShip.cc  HybridShip.cc  LightWeightShip.cc  LightWeightWarShip.cc  Phaser.cc  Phaser.h  Ship.cc  TransportShip.cc  WarShip.cc  Weapon.cc  Weapon.h
tests/: BlasterTest.cc  ContainerTest.cc  EquipmentTest.cc  HeavyShipTest.cc  HeavyWarShipTest.cc  HybridShipTest.cc  LightWeightShipTest.cc  LightWeightWarShipTest.cc  PhaserTest.cc  PhaserTest.h  TeacherScenarioTest.cc  TransportShipTest.cc  WarShipTest.cc
